<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.runrmby.runner.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_0"
        android:id="@+id/titleScreen"
        android:visibility="visible" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/titleScreenAlternate"
        android:visibility="gone" />

    <!-- The primary full-screen view. This can be replaced with whatever view
        is needed to present your content, e.g. VideoView, SurfaceView,
        TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="Loading..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameMenu"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Timer 1:23.45"
            android:id="@+id/timer"
            android:layout_gravity="left|top"
            android:visibility="visible"
            android:background="@drawable/rectangle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/tempButton"
            android:layout_gravity="top|right" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameEndMenu"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGameMenuAnchor"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text=" " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="PLACEHOLDER"
            android:id="@+id/endGameText"
            android:layout_alignTop="@+id/endGameMenuAnchor"
            android:layout_alignLeft="@+id/endGameUserTime"
            android:layout_alignStart="@+id/endGameUserTime"
            android:layout_alignRight="@+id/endGameBestTime"
            android:layout_alignEnd="@+id/endGameBestTime"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGameYourRun"
            android:layout_below="@+id/endGameText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:text="Your Run: ###  Best Run: ###"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGameStatNames"
            android:layout_below="@+id/endGameYourRun"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:text="Time:\nDistance:\nSteps:\nCoins:\n__________\nRun Score:\nHigh Score:\nXP Gained:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/rectangle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGameStats"
            android:layout_alignTop="@+id/endGameStatNames"
            android:layout_toRightOf="@+id/endGameMenuAnchor"
            android:text="-:--:---\n12345\n123\n123\n__________\n12345"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time: 1:23.45"
            android:id="@+id/endGameUserTime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/endGameStats"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Best: 1:23.45"
            android:id="@+id/endGameBestTime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/endGameStats"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playAgainButton"
            android:background="@mipmap/play_again_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/endGameBestTime"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuButton"
            android:background="@mipmap/menu_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/playAgainButton"
            android:layout_marginBottom="40dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainMenu"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/finger_runner"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menuPlaceholder"
            android:layout_centerInParent="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextLocationButton"
            android:text="@string/next_location"
            android:layout_alignTop="@+id/menuPlaceholder"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousLocationButton"
            android:text="@string/previous_location"
            android:layout_alignTop="@+id/menuPlaceholder"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playButton"
            android:background="@mipmap/time_trial_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nextLocationButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playDistanceModeButton"
            android:background="@mipmap/distance_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/playButton"
            android:layout_marginTop="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsButton"
            android:background="@mipmap/options_text"
            android:layout_below="@+id/playDistanceModeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boxTextView"
            android:background="@drawable/rectangle"
            android:layout_alignTop="@+id/menuPlaceholder"
            android:layout_alignStart="@+id/previousLocationButton"
            android:layout_alignLeft="@+id/previousLocationButton"
            android:layout_alignEnd="@+id/nextLocationButton"
            android:layout_alignRight="@+id/nextLocationButton"
            android:layout_alignBottom="@+id/settingsButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menuText"
            android:text="@string/loc0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:gravity="top"
            android:layout_alignTop="@+id/menuPlaceholder"
            android:layout_toRightOf="@+id/previousLocationButton"
            android:layout_toLeftOf="@+id/nextLocationButton"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/menuBestTimeText"
            android:text="Best Time: 1:23:45"
            android:textAlignment="center"
            android:layout_alignStart="@+id/boxTextView"
            android:layout_alignLeft="@+id/boxTextView"
            android:layout_alignEnd="@+id/boxTextView"
            android:layout_alignRight="@+id/boxTextView"
            android:layout_below="@+id/playButton"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/menuDistanceText"
            android:text="Longest Run: 12345"
            android:textAlignment="center"
            android:layout_alignStart="@+id/boxTextView"
            android:layout_alignLeft="@+id/boxTextView"
            android:layout_alignEnd="@+id/boxTextView"
            android:layout_alignRight="@+id/boxTextView"
            android:layout_below="@+id/playDistanceModeButton"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pauseMenu"
        android:visibility="visible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumeButton"
            android:background="@mipmap/resume_text"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pauseMMButton"
            android:background="@mipmap/menu_text"
            android:layout_below="@+id/resumeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/settingsMenu"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Return to Main Menu"
            android:id="@+id/exitSettingsButton"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mute_music_button"
            android:textOff="@string/play_music"
            android:textOn="@string/mute_music"
            android:checked="true"
            android:layout_above="@id/exitSettingsButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Whistle Music\n(1000 XP)"
            android:textOn="Original Music"
            android:checked="false"
            android:enabled="false"
            android:id="@+id/whistleMusicButton"
            android:layout_above="@id/mute_music_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset Game"
            android:id="@+id/resetButton"
            android:layout_above="@id/whistleMusicButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Statistics"
            android:id="@+id/statsButton"
            android:layout_above="@id/resetButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Credits"
            android:id="@+id/creditsButton"
            android:layout_above="@id/resetButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/experiencePoints"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsTextView"
            android:background="@drawable/rectangle"
            android:layout_alignTop="@+id/creditsButton"
            android:layout_alignStart="@+id/exitSettingsButton"
            android:layout_alignLeft="@+id/exitSettingsButton"
            android:layout_alignEnd="@+id/exitSettingsButton"
            android:layout_alignRight="@+id/exitSettingsButton"
            android:layout_alignBottom="@+id/exitSettingsButton"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/creditsText"
        android:text="@string/credits"
        android:textSize="20dp"
        android:background="@color/colorTransparentLightGray"
        android:textAlignment="center"
        android:gravity="center"
        android:enabled="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/statsMenu"
        android:visibility="gone">

    </RelativeLayout>

</FrameLayout>
